--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <!-- General meta tags -->
+    <meta
+      name="description"
+      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://scran-vite-2b11a.web.app/" />
+    <!-- Replace with your website URL -->
+    <meta property="og:title" content="Scran | A Recipe App for the Web" />
+    <meta
+      property="og:description"
+      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
+    />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/assets/Scran_Screenshot.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://scran-vite-2b11a.web.app/" />
+    <!-- Replace with your website URL -->
+    <meta property="twitter:title" content="Scran | A Recipe App for the Web" />
+    <meta
+      property="twitter:description"
+      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
+    />
+    <meta
+      property="twitter:image"
+      content="%PUBLIC_URL%/assets/Scran_Screenshot.jpg"
+    />
+    <title>Scran | A Recipe App for the Web</title>
   </head>
   <body>
     <div id="root"></div>
