--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:image"
-      content="%PUBLIC_URL%/assets/Scran_Screenshot.jpg"
+      content="https://scran-vite-2b11a.web.app/assets/Scran_Screenshot.jpg"
     />
 
     <!-- Twitter -->
@@ -49,7 +49,7 @@
     />
     <meta
       property="twitter:image"
-      content="%PUBLIC_URL%/assets/Scran_Screenshot.jpg"
+      content="https://scran-vite-2b11a.web.app/assets/Scran_Screenshot.jpg"
     />
     <title>Scran | A Recipe App for the Web</title>
   </head>
