moved images out of assets

--- a/index.html
+++ b/index.html
@@ -2,21 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/favicon-16x16.png"
-    />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="canonical" href="https://scran-vite-2b11a.web.app/" />
-    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- General meta tags -->
     <meta
@@ -33,10 +23,7 @@
       property="og:description"
       content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
     />
-    <meta
-      property="og:image"
-      content="https://scran-vite-2b11a.web.app/assets/Scran_Screenshot.jpg"
-    />
+    <meta property="og:image" content="/Scran_Screenshot.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -47,10 +34,7 @@
       property="twitter:description"
       content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
     />
-    <meta
-      property="twitter:image"
-      content="https://scran-vite-2b11a.web.app/assets/Scran_Screenshot.jpg"
-    />
+    <meta property="twitter:image" content="/Scran_Screenshot.jpg" />
     <title>Scran | A Recipe App for the Web</title>
   </head>
   <body>
