changed image for twitter share

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       property="twitter:description"
       content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
     />
-    <meta property="twitter:image" content="/Scran_Screenshot.jpg" />
+    <meta property="twitter:image" content="/android-chrome-512x512.png" />
     <title>Scran | A Recipe App for the Web</title>
   </head>
   <body>
