edited meta data and deleted robots.txt

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
     />
 
-    <!-- Open Graph / Facebook -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@frankintech00" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://scran-vite-2b11a.web.app/" />
     <!-- Replace with your website URL -->
@@ -25,16 +26,6 @@
     />
     <meta property="og:image" content="/Scran_Screenshot.jpg" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://scran-vite-2b11a.web.app/" />
-    <!-- Replace with your website URL -->
-    <meta property="twitter:title" content="Scran | A Recipe App for the Web" />
-    <meta
-      property="twitter:description"
-      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
-    />
-    <meta property="twitter:image" content="/android-chrome-512x512.png" />
     <title>Scran | A Recipe App for the Web</title>
   </head>
   <body>
