edited meta data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
     />
 
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@frankintech00" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://scran-vite-2b11a.web.app/" />
