--- a/documentation/main.jsx.html
+++ b/documentation/main.jsx.html
@@ -7,7 +7,7 @@
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Scran Documentation constants/difficulties.jsx</title>
+  <title>Scran Documentation main.jsx</title>
 
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -80,7 +80,7 @@
             <div class="content">
                 <header class="page-title">
                     <p>Source</p>
-                    <h1>constants/difficulties.jsx</h1>
+                    <h1>main.jsx</h1>
                 </header>
                 
 
@@ -90,11 +90,37 @@
     <section>
         <article>
             <pre class="prettyprint source linenums"><code>/**
- * Array of recipe difficulties.
- *
- * @type {string[]}
+ * @file This is the main entry point for the application. It sets up React concurrent mode and renders the App component into the DOM.
  */
-export const DIFFICULTIES = ["Easy", "Medium", "Hard"];
+
+// Importing necessary libraries, components and styles
+import React from "react";
+import { createRoot } from "react-dom/client";
+import "./index.css";
+import App from "./App";
+import "@smastrom/react-rating/style.css";
+
+/**
+ * Gets the root DOM node where the React application will be attached.
+ * @type {HTMLElement}
+ */
+const rootContainer = document.getElementById("root");
+
+/**
+ * Creates a React root for Concurrent Mode rendering.
+ * @type {ReactRoot}
+ */
+const root = createRoot(rootContainer);
+
+/**
+ * Renders the App component into the DOM.
+ * Wraps the App component with React.StrictMode for additional checks and warnings in development.
+ */
+root.render(
+  &lt;React.StrictMode>
+    &lt;App />
+  &lt;/React.StrictMode>
+);
 </code></pre>
         </article>
     </section>
