edited to remove uni project ref

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- General meta tags -->
     <meta
       name="description"
-      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
+      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected."
     />
 
     <meta property="twitter:card" content="summary" />
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Scran | A Recipe App for the Web" />
     <meta
       property="og:description"
-      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected. It was created as part of a Masters project for the MSc in Software Development at the University of Starthclyde."
+      content="Scran is a web application that allows users to search for recipes, add their own recipes, and create a shopping list based on the recipes they have selected."
     />
     <meta property="og:image" content="/Scran_Screenshot.jpg" />
 
